--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,109 @@
+<!--
+  Generated template for the HomePage page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
+
 <ion-header>
   <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
+    <button end ion-button menuToggle>
+      <ion-icon name="md-more"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title style="padding-left: 12%;">Home</ion-title>
   </ion-navbar>
+  <!-- only user who login -->
+  <page-header *ngIf="user!=undefined" (click)="goToMyCoins()"></page-header>
+
+  <ion-segment [(ngModel)]="segment">
+    <ion-segment-button value="THB" (click)="changeMarket('THB')">
+      THB Markets
+    </ion-segment-button>
+    <ion-segment-button value="BTC" (click)="changeMarket('BTC')">
+      BTC Markets
+    </ion-segment-button>
+    <ion-segment-button value="ETH" (click)="changeMarket('ETH')">
+      ETH Markets
+    </ion-segment-button>
+    <ion-segment-button value="USD" (click)="changeMarket('USD')">
+      USDT Markets
+    </ion-segment-button>
+  </ion-segment>
+  <ion-searchbar (ionInput)="search($event)" [(ngModel)]="searchText"></ion-searchbar>
 </ion-header>
 
+
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+  <span *ngIf="!isfiltered">
+  <ion-list>
+    <ion-item-sliding #slidingItem *ngFor="let crypto of coins">
+      <ion-item (click)="goToDetail(crypto)" >
+        <ion-avatar item-start>
+          <img class="imgSize" src="https://d2v7vc3vnopnyy.cloudfront.net/img/coins/{{crypto.secondary_currency}}.png" />
+        </ion-avatar>
+        <ion-label class="fixedLeft">
+          {{ crypto.secondary_currency }} <br>
+          <span class="fontsize bottons">{{crypto.nameCrypto}}</span>
+  </ion-label>
+  <ion-label class="fixedRight">
+    <span [ngClass]="{rateCurrency:crypto.change<0}">
+                {{crypto.last_price}} {{crypto.primary_currency}}
+            <br>
+            <span *ngIf="crypto.change<0" [ngClass]="{ratedownCurrency:crypto.change<0}">
+                  {{crypto.change}}%
+                  <span><ion-icon name="md-arrow-dropdown"></ion-icon></span>
+    </span>
+    <span *ngIf="crypto.change>=0" [ngClass]="{rateupCurrency:crypto.change>=0}">
+                <span> +{{crypto.change}} </span>
+    <ion-icon name="md-arrow-dropup"></ion-icon>
+    </span>
+    </span>
+  </ion-label>
+  </ion-item>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <ion-item-options side="left">
+    <button ion-button icon-only (click)="goToAddTransaction(slidingItem,crypto)" color="bgyellow">
+	 	 			  <ion-icon color="light" name="add-circle"></ion-icon>
+	 	 		  </button>
+  </ion-item-options>
+  </ion-item-sliding>
+  </ion-list>
+  </span>
+
+  <span *ngIf="isfiltered">
+    <ion-list>
+      <ion-item-sliding #slidingItem *ngFor="let crypto of filteredCrypto">
+        <ion-item (click)="goToDetail(crypto)">
+          <ion-avatar item-start>
+            <img class="imgSize" src="https://d2v7vc3vnopnyy.cloudfront.net/img/coins/{{crypto.secondary_currency}}.png" />
+          </ion-avatar>
+          <ion-label class="fixedLeft">
+            {{ crypto.secondary_currency }} <br>
+            <span class="fontsize bottons">{{crypto.nameCrypto}}</span>
+  </ion-label>
+  <ion-label class="fixedRight">
+    <span [ngClass]="{rateCurrency:crypto.change<0}">
+                {{crypto.last_price}} {{crypto.primary_currency}}
+            <br>
+            <span *ngIf="crypto.change<0" [ngClass]="{ratedownCurrency:crypto.change<0}">
+                  {{crypto.change}}%
+                  <span><ion-icon name="md-arrow-dropdown"></ion-icon></span>
+    </span>
+    <span *ngIf="crypto.change>=0" [ngClass]="{rateupCurrency:crypto.change>=0}">
+                <span> +{{crypto.change}} </span>
+    <ion-icon name="md-arrow-dropup"></ion-icon>
+    </span>
+    </span>
+  </ion-label>
+  </ion-item>
+
+  <ion-item-options side="left">
+    <button ion-button icon-only (click)="goToAddTransaction(slidingItem,crypto)" color="bgyellow">
+	 	 			  <ion-icon color="light" name="add-circle"></ion-icon>
+	 	 		  </button>
+  </ion-item-options>
+  </ion-item-sliding>
+  </ion-list>
+  </span>
 </ion-content>
