--- a/src/pages/coins-detail/coins-detail.html
+++ b/src/pages/coins-detail/coins-detail.html
@@ -14,7 +14,7 @@
     </ion-buttons>
     <ion-title>CoinsDetail </ion-title>
     
-    <ion-buttons right (click)="screenShot()">
+    <ion-buttons right (click)="openMenu()">
       <button ion-button icon-only>
         <ion-icon  name="camera"></ion-icon>
       </button>
